# bench-bisect

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
benchbisect/: bench.py  engine.py  git.py  main.py  plot.py
