[tool.poetry]
name = "benchbisect"
version = "0.1.0"
description = ""
authors = ["Manish Sinha <manishsinha.tech@gmail.com>"]
readme = "README.md"
packages = [{include = "benchbisect"}]

[tool.poetry.dependencies]
python = "^3.10"
pyinstrument = "4.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
benchbisect = "benchbisect.main:main"

[tool.poetry.plugins."console_scripts"]
benchbisect = "benchbisect.main:main"